--- a/src/main/resources/templates/bootstrap-admin-page-ViewAllUsers.html
+++ b/src/main/resources/templates/bootstrap-admin-page-ViewAllUsers.html
@@ -1,30 +1,177 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Admin page</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Обязательные метатеги -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="/static/css/adminPage.css" th:href="@{/css/adminPage.css}" rel="stylesheet"/>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+          integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
+    <title>User information</title>
+
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" id="${}">Navbar</a>
-    <a class="navbar-brand" ></a>
 
-</nav>
+<header>
+    <nav class="navbar navbar-expand-lg bg-dark">
+        <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+
+            <h5 id="h5Email">
+                <td th:text="${user.getEmail()}"></td>
+            </h5>
+
+            <h5 id="h5WithRole">with roles:</h5>
+
+            <h5 id="h5RoleSet">
+                <tr th:each="role : ${user.getRoles()}">
+                    <td th:text="${role.getName()}"></td>
+                </tr>
+            </h5>
+        </div>
+
+        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link py-0" style="color: #8b989c" href="/logout">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</header>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-2 p-0 mt-4">
+            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#admin" role="tab" aria-controls="v-pills-home" aria-selected="true">Admin</a>
+                <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#user" role="tab" aria-controls="v-pills-profile" aria-selected="false">User</a>
+            </div>
+        </div>
+
+        <div class="col-lg-10">
+            <div class="mt-4">
+                <h2>Admin panel</h2>
+            </div>
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#adminPage" data-toggle="pill">Users table</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#newUser" data-toggle="pill">New user</a>
+                </li>
+            </ul>
+            <div class="tab-content">
+                <div class="tab-pane fade show active" id="adminPage">
+                    <div class="card">
+                        <h4 class="card-header">All users</h4>
+                        <div class="card-body">
+                            <div class="card-block text-lg-left">
+                                <table class="table table-striped table-sm">
+                                    <thead>
+                                    <tr>
+                                        <th scope="col" width="3%">ID</th>
+                                        <th scope="col" width="10%">First Name</th>
+                                        <th scope="col" width="10%">Last Name</th>
+                                        <th scope="col" width="5%">Age</th>
+                                        <th scope="col" width="8%">Email</th>
+                                        <th scope="col" width="8%">Role</th>
+                                        <th scope="col" width="4%">Edit</th>
+                                        <th scope="col" width="4%">Delete</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr th:each="user:${allUsers}">
+                                        <td th:text="${user.getId()}"></td>
+                                        <td th:text="${user.getFirstName()}"></td>
+                                        <td th:text="${user.getLastName()}"></td>
+                                        <td th:text="${user.getAge()}"></td>
+                                        <td th:text="${user.getEmail()}"></td>
+                                        <td>
+                                            <div class="div1" th:each="role:${user.getRoles()}"
+                                                 th:text="${role.name}"></div>
+
+                                        </td>
+                                        <td>
+                                            <button type="button" class="btn btn-primary">Edit</button>
+                                        </td>
+                                        <td>
+                                            <button type="button" class="btn btn-danger">Delete</button>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane fade" id="newUser">
+                    <div class="card">
+                        <h4 class="card-header">Add new user</h4>
+                        <form class="formCreateUser" action="@{/}" method="post" th:object="${newUser}">
+                            <div class="form-group">
+                                <label for="firstName">First name</label>
+                                <input type="text" class="form-control" name="firstName" id="firstName"
+                                       placeholder="First name input">
+                            </div>
+                            <div class="form-group">
+                                <label for="lastNamet">Last name</label>
+                                <input type="text" class="form-control" id="lastNamet"
+                                       placeholder="Last name input">
+                            </div>
+                            <div class="form-group">
+                                <label for="age">Age</label>
+                                <input type="text" class="form-control" id="age"
+                                       placeholder="Age input">
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" class="form-control" id="email"
+                                       placeholder="name@example.com">
+                            </div>
+                            <div class="form-group">
+                                <label for="password">Password</label>
+                                <input type="password" id="password" class="form-control lg-mx-sm-3"
+                                       aria-describedby="passwordHelpInline" placeholder="Password">
+                                <small id="passwordHelpInline" class="text-muted">
+                                </small>
+                            </div>
+                            <div class="form-group" id="selectRoleForm">
+                                <label for="selectRoleUser">Role</label>
+                                <select multiple class="form-control" id="selectRoleUser">
+                                    <option>Admin</option>
+                                    <option>User</option>
+                                </select>
+                            </div>
+                            <button type="submit" class="btn btn-success">Add new user</button>
+                        </form>
+
+                    </div>
+                </div>
+            </div>
 
 
+        </div>
+    </div>
+</div>
+</div>
+</div>
+</div>
 
 
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
         crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+        integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
+</body>
+</html>
+
 </body>
 </html>
