--- a/src/main/resources/templates/createNewUser.html
+++ b/src/main/resources/templates/createNewUser.html
@@ -8,7 +8,7 @@
 
 <body>
 
-<form th:method="PATCH" th:action="@{/}" th:object="${user}">
+<form th:method="POST" th:action="@{/}" th:object="${user}">
     <h2>Create new user</h2>
     <div>
         <label for="firstName">First name</label>
