--- a/src/main/resources/templates/bootstrap-user-info.html
+++ b/src/main/resources/templates/bootstrap-user-info.html
@@ -18,13 +18,13 @@
         <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
 
             <h5 id="h5Email">
-                <td th:text="${user.getEmail()}"></td>
+                <td th:text="${userAuthorize.getEmail()}"></td>
             </h5>
 
             <h5 id="h5WithRole">with roles:</h5>
 
             <h5 id="h5RoleSet">
-                <tr th:each="role : ${user.getRoles()}">
+                <tr th:each="role : ${userAuthorize.getRoles()}">
                     <td th:text="${role.getName()}"></td>
                 </tr>
             </h5>
@@ -43,11 +43,10 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-2 p-0 mt-4">
-            <nav class="nav flex-column">
-                <button type="button" class="btn btn-primary btn-sm btn-block d-flex">
-                    <span class="align-content-lg-start">User</span>
-                </button>
-            </nav>
+            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                <a class="nav-link active" id="v-pills-profile-tab" data-toggle="pill" href="#user" role="tab"
+                   aria-controls="v-pills-profile" aria-selected="true">User</a>
+            </div>
         </div>
 
         <div class="col-lg-10">
@@ -70,14 +69,14 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <tr th:each="user : ${user}" class="table-active">
-                                <td th:text="${user.getId()}"></td>
-                                <td th:text="${user.getFirstName()}"></td>
-                                <td th:text="${user.getLastName()}"></td>
-                                <td th:text="${user.getAge()}"></td>
-                                <td th:text="${user.getEmail()}"></td>
+                            <tr th:each="user : ${userAuthorize}" class="table-active">
+                                <td th:text="${userAuthorize.getId()}"></td>
+                                <td th:text="${userAuthorize.getFirstName()}"></td>
+                                <td th:text="${userAuthorize.getLastName()}"></td>
+                                <td th:text="${userAuthorize.getAge()}"></td>
+                                <td th:text="${userAuthorize.getEmail()}"></td>
                                 <td>
-                                    <div class="div1" th:each="role:${user.getRoles()}" th:text="${role.name}"> </div>
+                                    <div class="div1" th:each="role:${userAuthorize.getRoles()}" th:text="${role.name}"> </div>
                                 </td>
                             </tr>
                             </tbody>
