--- a/src/main/resources/templates/createNewUser.html
+++ b/src/main/resources/templates/createNewUser.html
@@ -13,12 +13,12 @@
     <div>
         <label for="firstName">First name</label>
         <input type="text" th:field="*{firstName}" id="firstName">
-        <div style="color: brown" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"> First Name error</div>
+        <div th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"> First Name error</div>
         <br/>
 
         <label for="lastName">Last name</label>
         <input type="text" th:field="*{lastName}" id="lastName">
-        <div style="color: brown" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"> Last Name error</div>
+        <div th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"> Last Name error</div>
         <br/>
 
         <label for="age">Age</label>
@@ -28,12 +28,12 @@
 
         <label for="password">Password</label>
         <input type="text" th:field="*{password}" id="password">
-        <div style="color: brown" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"> Password error</div>
+        <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"> Password error</div>
         <br/>
 
         <label for="email">Email</label>
         <input type="text" th:field="*{email}" id="email">
-        <div style="color: brown" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"> Email error</div>
+        <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"> Email error</div>
         <br/>
 
         <label>Roles</label>
