--- a/src/main/resources/templates/bootstrap-admin-page-ViewAllUsers.html
+++ b/src/main/resources/templates/bootstrap-admin-page-ViewAllUsers.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg bg-dark">
 
         <!--        Информация об авторизованном пользователе-->
-        <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+        <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2" id="navbarHeader">
 
             <h5 id="h5Email">
                 <td th:text="${userAuthorize.getEmail()}"></td>
