--- a/src/main/resources/static/css/adminPage.css
+++ b/src/main/resources/static/css/adminPage.css
@@ -53,7 +53,7 @@
         margin-left: 5px
     }
 
-    #selectRoleUser {
+    #selectRoleUserCreateUser {
         width: 400px;
         height: 60px ;
     }
@@ -79,6 +79,10 @@
 
     #selectRoleFormModalDelete {
         height: 1%;
+    }
+    
+    #cardAboutUser {
+        width: auto;
     }
 
 
