--- a/src/main/resources/templates/bootstrap-admin-page-ViewAllUsers.html
+++ b/src/main/resources/templates/bootstrap-admin-page-ViewAllUsers.html
@@ -77,11 +77,10 @@
 
                     <div class="tab-content">
                         <div class="tab-pane fade show active" id="adminPage">
-                            <div class="card">
+                            <div class="card" id="cardAboutUser">
                                 <h4 class="card-header">All users</h4>
                                 <div class="card-body">
                                     <div class="card-block text-lg-left">
-
                                         <table class="table table-striped table-sm">
                                             <thead>
                                             <tr>
@@ -392,7 +391,7 @@
 
                 </div>
                 <div class="tab-pane fade" id="user" role="tabpanel" aria-labelledby="v-pills-profile-tab">
-                    <div class="col-lg-10">
+                    <div>
                         <div class="mt-4">
                             <h2>User information page</h2>
                         </div>
@@ -449,7 +448,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
-<script type="text/javascript" th:src="@{/js/adminPage.js}" src="static/js/adminPage.js"></script>
 </body>
 </html>
 
